--- a/1/1.html
+++ b/1/1.html
@@ -10,9 +10,9 @@
   <script src="../js/video.js"></script>
 </head>
   <body>
-    <video id="player" class="video-js" width="1200" height="800"></video>
+    <video id="player" class="video-js vjs-default-skin vjs-big-play-centered" width="1200" height="800"></video>
   </body>
 </html>
 <script>
-loadVideo();
+loadVideo('01_01',12);
 </script>
