--- a/5~6호기/1/1.html
+++ b/5~6호기/1/1.html
@@ -7,12 +7,12 @@
   <meta name='viewport' content='width=device-width, initial-scale=1'>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/video.js/7.8.1/video-js.min.css" rel="stylesheet">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/video.js/7.8.1/video.min.js"></script>
-  <script src="../js/video.js"></script>
+  <script src="../../js/video.js"></script>
 </head>
   <body>
     <video id="player" class="video-js vjs-default-skin vjs-big-play-centered" width="1200" height="800"></video>
   </body>
 </html>
 <script>
-loadVideo('01_01',12);
+loadVideo('01_01',11);
 </script>
