--- a/7~8호기/1/1.html
+++ b/7~8호기/1/1.html
@@ -8,6 +8,7 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/video.js/7.8.1/video-js.min.css" rel="stylesheet">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/video.js/7.8.1/video.min.js"></script>
   <script src="../../js/video.js"></script>
+  <link href="../../static/style/sidebar.css" rel="stylesheet">
 </head>
   <body>
     <video id="player" class="video-js vjs-default-skin vjs-big-play-centered" width="1200" height="800"></video>
