--- a/education01/1/1.html
+++ b/education01/1/1.html
@@ -16,8 +16,11 @@
   </body>
 </html>
 <script>
-// 마지막 _n 은 고정
-// 앞에 파일명은 동일하게 세팅 \ 뒤는 비디오 갯수
-loadVideo('한국서부발전(주)_1강_비쥬얼인프라_01',21);
+// 비디오 채번 방식
+// 한국서부발전(주)_1강_비쥬얼인프라 01_01
+// 한국서부발전(주)_2강_비쥬얼인프라_01_02
+
+loadVideo();
+
 setCommit();
 </script>
